crates/test-files/fixtures/compile_errors/trait_not_in_scope2/src/main.fe

contract Example {
  pub fn run_test(self) {
    u256::do()
  }
}
